Pushing files to test on the others computers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required (VERSION 3.17)
 
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
-
+set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake"
+  CACHE STRING "Vcpkg toolchain file")
+# set(DUDEV_PATH_INCLUDES "./opt/udev/include")
 project(rtype CXX)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -13,36 +15,35 @@ client/main.cpp)
 set(ServerSrc
 server/main.cpp)
 
-include(FetchContent)
-FetchContent_Declare(sfml                             # name of the content
-    GIT_REPOSITORY https://github.com/SFML/SFML.git  # the repository
-    GIT_TAG        2.5.1                             # the tag
-)
-FetchContent_MakeAvailable(sfml)
-FetchContent_GetProperties(sfml)
-if(NOT sfml_POPULATED)
-    FetchContent_Populate(sfml)
-    add_subdirectory(${sfml_SOURCE_DIR} ${sfml_BINARY_DIR})
-endif()
+# include(FetchContent)
+# FetchContent_Declare(SFML                             # name of the content
+#     GIT_REPOSITORY https://github.com/SFML/SFML.git  # the repository
+#     GIT_TAG        2.6.x                             # the tag
+# )
+# FetchContent_MakeAvailable(SFML)
+# FetchContent_GetProperties(sfml)
+# if(NOT sfml_POPULATED)
+#     FetchContent_Populate(sfml)
+#     add_subdirectory(${sfml_SOURCE_DIR} ${sfml_BINARY_DIR})
+# endif()
 # add_subdirectory(SFML)
-# find_package(SFML 2.5 COMPONENTS window graphics system network REQUIRED)
+
+# set(SFML_STATIC_LIBRARIES TRUE)
+# find_package(SFML 2.5 COMPONENTS audio network graphics window system REQUIRED)
 
 add_executable(r-type_client ${ClientSrc})
 add_executable(r-type_server ${ServerSrc})
-target_compile_options(r-type_client
-                       PRIVATE
-                       $<$<CXX_COMPILER_ID:MSVC>:/W3 /permissive- /TP>
-					   $<$<CXX_COMPILER_ID:GNU>:-Wall -Wextra>)
+# target_compile_options(r-type_client
+#                        PRIVATE
+#                        $<$<CXX_COMPILER_ID:MSVC>:/W3 /permissive- /TP>
+# 					   $<$<CXX_COMPILER_ID:GNU>:-Wall -Wextra>)
 
-target_link_libraries(r-type_client PRIVATE sfml-window)
-target_link_libraries(r-type_client PRIVATE sfml-network)
-target_link_libraries(r-type_client PRIVATE sfml-system)
-target_link_libraries(r-type_client PRIVATE sfml-graphics)
-
-
-
-# cmake_minimum_required(VERSION 3.6)
-# project(simple-sfml-cmake-example)
+target_link_libraries(r-type_client PRIVATE
+sfml-audio
+sfml-system
+sfml-graphics
+sfml-network
+sfml-window)
 
 # set(CMAKE_MODULE_PATH
 #     ${CMAKE_SOURCE_DIR}/cmake_modules
