--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,47 +1,55 @@
-cmake_minimum_required (VERSION 3.17)
+cmake_minimum_required(VERSION 3.19)
+project(RTYPE LANGUAGES CXX)
 
-set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR})
+set(DEBUG_MODE TRUE)
+set(CMAKE_BUILD_TYPE DEBUG)
 
-project(rtype CXX)
+set(CLIENT RTYPE_client)
+set(SERVER RTYPE_server)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_SHARED_LIBRARY_PREFIX "")
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_INCLUDE_CURRENT_DIR TRUE)
 
-set(ClientSrc
-Client/main.cpp
-Client/GameClient.cpp)
+add_definitions("-fPIC -Wall -Wextra -Wno-empty-body -Wno-switch")
+if(CMAKE_BUILD_TYPE MATCHES DEV)
+    add_definitions("")
+endif()
 
-set(EcsSrc
-Ecs/Entity/Entity.cpp
-Ecs/Entity/EntityManager.cpp
-Ecs/Component/ComponentManager.cpp
-Ecs/Component/sources/Acceleration.cpp
-Ecs/Component/sources/Controlable.cpp
-Ecs/Component/sources/Damage.cpp
-Ecs/Component/sources/Health.cpp
-Ecs/Component/sources/Hitbox.cpp
-Ecs/Component/sources/Id.cpp
-Ecs/Component/sources/Position.cpp
-Ecs/Component/sources/Rotate.cpp
-Ecs/Component/sources/Size.cpp
-Ecs/Component/sources/Speed.cpp
-Ecs/Component/sources/Sprite.cpp
-Ecs/Component/sources/Text.cpp
-Ecs/System/CollisionSystem.cpp
-Ecs/System/MoveSystem.cpp
-Ecs/System/GraphicSystem.cpp
-Ecs/System/TextSystem.cpp
-Ecs/System/ShootSystem.cpp
-Ecs/System/SystemManager.cpp
-Ecs/System/System.cpp
-Ecs/Manager.cpp)
+if(CMAKE_BUILD_TYPE MATCHES RELEASE)
+    add_definitions("-O3 -lto")
+endif()
 
-set(GraphicSrc
-Graphics/Events.cpp
-Graphics/InitSfml.cpp)
+if(DEBUG_MODE MATCHES TRUE)
+    add_definitions("-g -DDEBUG")
+endif()
 
-set(ServerSrc
-server/main.cpp)
+#find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
+#include_directories(${SFML_INCLUDE_DIRS})
+#include_directories("/opt/homebrew/Cellar/sfml/2.5.1_1/include")
 
-add_executable(r-type_client ${ClientSrc} ${GraphicSrc} ${EcsSrc})
-add_executable(r-type_server ${ServerSrc} ${GraphicSrc} ${EcsSrc})
+include(build/conanbuildinfo.cmake)
+include(build/conan_paths.cmake)
+conan_basic_setup(KEEP_RPATHS)
+
+file(GLOB_RECURSE SRC_CLIENT Client/*)
+file(GLOB_RECURSE SRC_COMMON ${PROJECT_SOURCE_DIR}/Ecs/*)
+file(GLOB_RECURSE SRC_COMMONS ${PROJECT_SOURCE_DIR}/Graphics/*)
+
+# include(conan.cmake)
+
+# conan_cmake_run(REQUIRES Catch2/2.6.0@catchorg/stable
+#                 BASIC_SETUP)
+
+add_executable(${CLIENT} ${SRC_CLIENT} ${SRC_COMMON} ${SRC_COMMONS})
+
+set(SHARED_INCLUDE_FOLDER shared)
+target_include_directories(${CLIENT} PUBLIC SHARED_INCLUDE_FOLDER)
+
+#conan_target_link_libraries(${CLIENT} PRIVATE CONAN_PKG::SFML)
+
+target_link_libraries(${CLIENT} sfml-system sfml-window sfml-graphics sfml-network sfml-audio)
+# target_link_libraries(${CLIENT} CONAN_PKG::SFML)
+
+# conan_target_link_libraries(${SERVER} PRIVATE CONAN_PKG::ASIO)
+# conan_target_link_libraries(${CLIENT} PRIVATE CONAN_PKG::BOOST)
