--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,16 @@ project(RTYPE LANGUAGES CXX)
 
 set(DEBUG_MODE TRUE)
 set(CMAKE_BUILD_TYPE DEBUG)
+set(CMAKE_TOOLCHAIN_FILE "${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake"
+  CACHE STRING "Vcpkg toolchain file")
 
-set(CLIENT RTYPE_client)
-set(SERVER RTYPE_server)
+set(CLIENT r-type_client)
+set(SERVER r-type_server)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_INCLUDE_CURRENT_DIR TRUE)
+set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
 
 add_definitions("-fPIC -Wall -Wextra -Wno-empty-body -Wno-switch")
 if(CMAKE_BUILD_TYPE MATCHES DEV)
@@ -24,16 +27,17 @@ if(DEBUG_MODE MATCHES TRUE)
     add_definitions("-g -DDEBUG")
 endif()
 
-# find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
+find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
 #include_directories(${SFML_INCLUDE_DIRS})
 #include_directories("/opt/homebrew/Cellar/sfml/2.5.1_1/include")
 
-include(build/conanbuildinfo.cmake)
-include(build/conan_paths.cmake)
-conan_basic_setup(KEEP_RPATHS)
+# CONAN_CALLS
+# include(build/conanbuildinfo.cmake)
+# include(build/conan_paths.cmake)
+# conan_basic_setup(KEEP_RPATHS)
 
 file(GLOB_RECURSE SRC_CLIENT ${PROJECT_SOURCE_DIR}/client/*)
-# file(GLOB_RECURSE SRC_SERVER server/*)
+file(GLOB_RECURSE SRC_SERVER server/*)
 # file(GLOB_RECURSE SRC_COMMON ${PROJECT_SOURCE_DIR}/shared/*)
 
 # include(conan.cmake)
@@ -42,15 +46,11 @@ file(GLOB_RECURSE SRC_CLIENT ${PROJECT_SOURCE_DIR}/client/*)
 #                 BASIC_SETUP)
 
 add_executable(${CLIENT} ${SRC_CLIENT})
-# add_executable(${SERVER} ${SRC_SERVER})
+add_executable(${SERVER} ${SRC_SERVER})
 
 # set(SHARED_INCLUDE_FOLDER shared)
-# target_include_directories(${SERVER} PUBLIC SHARED_INCLUDE_FOLDER)
+target_include_directories(${SERVER} PUBLIC SHARED_INCLUDE_FOLDER)
 target_include_directories(${CLIENT} PUBLIC SHARED_INCLUDE_FOLDER)
 
-#conan_target_link_libraries(${CLIENT} PRIVATE CONAN_PKG::SFML)
-
 target_link_libraries(${CLIENT} sfml-system sfml-window sfml-graphics sfml-network sfml-audio)
-# target_link_libraries(${CLIENT} CONAN_PKG::SFML)
-
-# target_link_libraries(${SERVER} sfml-system sfml-window sfml-graphics sfml-network sfml-audio)
+target_link_libraries(${SERVER} sfml-system sfml-network)
