--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_INCLUDE_CURRENT_DIR TRUE)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR})
 
-add_definitions("-fPIC -Wall -Wextra -Wno-empty-body -Wno-switch")
+# add_definitions("-fPIC -Wall -Wextra -Wno-empty-body -Wno-switch")
 if(CMAKE_BUILD_TYPE MATCHES DEV)
     add_definitions("")
 endif()
@@ -27,16 +27,19 @@ if(DEBUG_MODE MATCHES TRUE)
     add_definitions("-g -DDEBUG")
 endif()
 
-#find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
 #include_directories(${SFML_INCLUDE_DIRS})
 #include_directories("/opt/homebrew/Cellar/sfml/2.5.1_1/include")
 
-include(FetchContent)
-FetchContent_Declare(sfml                             # name of the content
-    GIT_REPOSITORY https://github.com/SFML/SFML.git  # the repository
-    GIT_TAG        2.5.1                             # the tag
-)
-FetchContent_MakeAvailable(sfml)
+if (WIN32)
+    find_package(SFML 2.5 COMPONENTS system window graphics network audio REQUIRED)
+else()
+    include(FetchContent)
+    FetchContent_Declare(sfml                             # name of the content
+        GIT_REPOSITORY https://github.com/SFML/SFML.git  # the repository
+        GIT_TAG        2.5.1                             # the tag
+    )
+    FetchContent_MakeAvailable(sfml)
+endif()
 # CONAN_CALLS
 # include(build/conanbuildinfo.cmake)
 # include(build/conan_paths.cmake)
