--- a/.github/workflows/gen-doxygen.yml
+++ b/.github/workflows/gen-doxygen.yml
@@ -7,8 +7,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: DenverCoder1/doxygen-github-pages-action@v1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: doxygen-documentation
-          folder: docs/html
+      - uses: mattnotmitt/doxygen-action@v1.9.4
+      with:
+          working-directory: '.'
+          doxyfile-path: '.'
